Integration of Airline and buffer plugins

--- a/.gitconfig
+++ b/.gitconfig
@@ -132,8 +132,8 @@
 
 [color "status"]
 
-    added = yellow
-    changed = green
+    added = green
+    changed = red
     untracked = cyan
 
 [diff]
