removal of vim directory, updates to most all dotfiles, added ctags, ideavimrc and nvmrc

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,12 +1,15 @@
 {
 	"-W110": false, // Turns off mixed quote error
-	"strict" true,
+	"-W069": false, // Turns off [] is better written in dot notation
+	"strict": true,
 	"trailing": true, // No trailing whitespace
 	"curly": true, // Enforce curly braces for conditional functions
-	"quotmark": false // no mixed quote enforcment 
+	"quotmark": false, // no mixed quote enforcment 
 	"browser": true, // Globals exposed by modern browsers
 	"devel": true, // Global developer tools
 	"jasmine": true,
 	"jquery": true,
 	"node": true,
+	"validthis": true,
+	"unused": true
 }
