--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	name = gallor
+	name = Grant Allor
 	email = thelistener13+git@gmail.com
 
 [alias]
@@ -93,7 +93,7 @@
 [core]
 
     # Use custom `.gitignore` and `.gitattributes`
-    excludesfile = ~/.gitignore_global
+	excludesFile = /Users/gallor/.gitignore_global
     attributesfile = ~/.gitattributes
 
     # Treat spaces before tabs and all kinds of trailing whitespace as an error
@@ -143,7 +143,7 @@
 	tool = diffmerge
 
 [difftool "diffmerge"]
-	cmd = diffmerge \"%LOCAL\" \"$REMOTE\"
+	cmd = diffmerge \"$LOCAL\" \"$REMOTE\"
 
 [merge]
 	tool = diffmerge
@@ -165,7 +165,7 @@
     # Use the Git 1.x.x default to avoid errors on machines with old Git
     # installations. To use `simple` instead, add this to your `~/.extra` file:
     # `git config --global push.default simple`. See http://git.io/mMah-w.
-    default = matching
+	default = nothing
     # Make `git push` push relevant annotated tags when pushing branches out.
     followTags = true
 
@@ -194,3 +194,11 @@
 	clean = git-lfs clean %f
 	smudge = git-lfs smudge %f
 	required = true
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /opt/homebrew-cask/Caskroom/sourcetree/2.3/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
+[commit]
+	template = /Users/gallor/.stCommitMsg
