lots of updates

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-# reset all key bindings
+#r reset all key bindings
 # source ~/.tmux.reset.conf
 
 # remap prefix from 'C-b' to 'C-a'
@@ -7,7 +7,7 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # split panes using | and -
-bind \ split-window -h
+bind \\ split-window -h
 bind - split-window -v
 
 bind < resize-pane -L 10
@@ -47,8 +47,8 @@ bind l select-pane -R
 # set history limit to 5000
 set -g history-limit 5000
 
-# tmux messages are displayed for 4 secs
-set -g display-time 4000
+# tmux messages are displayed for 5 secs
+set -g display-time 5000
 
 # support autoread in vim
 set -g focus-events on
@@ -69,11 +69,14 @@ set -g @plugin 'tmux-plugins/tmux-continuum' # automatic session save and restor
 # restore neovim sessions
 set -g @resurrect-strategy-nvim 'session'
 
-set -g @continuum-restore 'off' # automatically restore last saved environment
+set -g @continuum-restore 'on' # automatically restore last saved environment
 set -g @continuum-boot 'on' # automatically start tmux at reboot
-# set -g @continuum-boot-options 'iterm,fullscreen' # start iterm and fullscreen on restart
+set -g @continuum-boot-options 'iterm,fullscreen' # start iterm and fullscreen on restart
 
 set -g @resurrect-save 'S'
 set -g @resurrect-restore 'R'
+
+run-shell ~/clone/path/resurrect.tmux
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
