--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -7,13 +7,18 @@
   "diagnostic.errorSign": "X",
   "diagnostic.warningSign": "!",
   "diagnostic.infoSign": ">>",
-  "typescript.validate.enable": false,
-  "javascript.validate.enable": false,
-  "typescript.suggest.enabled": false,
-  "javascript.suggest.enabled": false,
+  "diagnostic.checkCurrentLine": true,
+  "tsserver.enable": true,
+  "typescript.validate.enable": true,
+  "javascript.validate.enable": true,
+  "typescript.suggest.enabled": true,
+  "javascript.suggest.enabled": true,
+  "javascript.suggestionActions.enabled": false,
+  "typescript.suggestionActions.enabled": false,
   "suggest.autoTrigger": "trigger",
   "yaml.customTags": [ "!Ref", "!Sub", "!GetAtt", "!Equals" ],
-  "python.jediEnabled": false,
+  "python.jediEnabled": true,
+  "python.linting.enabled": false,
   "languageserver": {
     "dockerfile": {
       "command": "docker-langserver",
