--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,6 +29,8 @@ set -sg escape-time 0
 bind C-k send-keys clear Enter\; clear-history
 # bind -n C-k clear-history
 
+# Set vi to navigate buffer
+set-window-option -g mode-keys vi
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
