Clean up code after new computer

--- a/.inputrc
+++ b/.inputrc
@@ -1,3 +1,11 @@
+# # Make Tab cycle between possible completions
+# Cycle forward: Tab
+# Cycle backward: Shift-Tab
+# Bind tab like zsh to select suggestions
+# bind 'TAB:menu-complete'
+Tab: menu-complete
+"\e[Z": menu-complete-backward
+
 # Make Tab autocomplete regardless of filename case
 set completion-ignore-case on
 
@@ -9,8 +17,8 @@ set mark-symlinked-directories on
 
 # Use the text that has already been typed as the prefix for searching through
 # commands (i.e. more intelligent Up/Down behavior)
-"\e[B": history-search-forward
-"\e[A": history-search-backward
+"\e[B":history-search-forward
+"\e[A":history-search-backward
 
 # Do not autocomplete hidden files unless the pattern explicitly begins with a dot
 set match-hidden-files off
@@ -35,6 +43,3 @@ set skip-completed-text on
 set input-meta on
 set output-meta on
 set convert-meta off
-
-# Use Alt/Meta + Delete to delete the preceding word
-"\e[3;3~": kill-word
