--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,4 +79,4 @@ set -g @resurrect-save 'S'
 set -g @resurrect-restore 'R'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
