Tweaks to tmux, updates to functions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,6 +55,11 @@ set -g display-time 5000
 # support autoread in vim
 set -g focus-events on
 
+# Add ssh var to sessions
+set -ga update-environment ' SSH_CONNECTION'
+set -ga update-environment ' SSH_CLIENT'
+set -ga update-environment ' SSH_TTY'
+
 # Set sensible copy mode key bindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
