Update coc commands

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -2,8 +2,8 @@
   "suggest.echodocSupport": true,
   "suggest.maxCompleteItemCount": 20,
   "suggest.floatEnable": false,
-  "signature.target": "echo",
-  "coc.preferences.hoverTarget": "echo",
+  "signature.target": "float",
+  "coc.preferences.hoverTarget": "float",
   "diagnostic.errorSign": "X",
   "diagnostic.warningSign": "!",
   "diagnostic.infoSign": ">>",
@@ -16,6 +16,7 @@
   "javascript.suggest.enabled": true,
   "javascript.suggestionActions.enabled": false,
   "typescript.suggestionActions.enabled": false,
+  "prettier.disableSuccessMessage": true,
   "suggest.autoTrigger": "trigger",
   "yaml.customTags": [ "!Ref", "!Sub", "!GetAtt", "!Equals" ],
   "python.jediEnabled": true,
