--- a/.tmux.conf
+++ b/.tmux.conf
@@ -73,6 +73,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible' # sensible standars
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist sessions
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatic session save and restoration
 
+# Pomo integration
+set-option -g status-right '#(cat ~/.pomo_stat)'
+
 # restore neovim sessions
 set -g @resurrect-strategy-nvim 'session'
 
