Tmux add yang plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,13 +62,15 @@ set -ga update-environment ' SSH_TTY'
 
 # Set sensible copy mode key bindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
+# bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-pipe 'xclip -in -selection clipboard'
 
 # ==========
 # Plugins
 # ==========
 set -g @plugin 'tmux-plugins/tpm' # plugin manager
+set -g @plugin 'tmux-plugins/tmux-yank' # OS aware copy to clipboard
 set -g @plugin 'tmux-plugins/tmux-sensible' # sensible standars
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist sessions
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatic session save and restoration
