Remove nerd tree, add neotree

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -78,6 +78,9 @@ set -g @plugin 'tmux-plugins/tmux-continuum' # automatic session save and restor
 # Pomo integration
 set-option -g status-right '#(cat ~/.pomo_stat)'
 
+# Set SSH vars
+set-option -ga update-environment ' SSH_CLIENT SSH_CONNECTION SSH_TTY'
+
 # restore neovim sessions
 set -g @resurrect-strategy-nvim 'session'
 
