--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,7 +37,12 @@ set -g base-index 1
 set -g pane-base-index 1
 
 # Enable utf and colors
-set -g default-terminal screen-256color
+# This only enabled after adding new italic terminfo
+set -g default-terminal "tmux-256color-italic"
+#  enable terminal compatibility with outside terminal
+set-option -ga terminal-overrides ",xterm-256color-italic:Tc"
+
+# set -g default-terminal screen-256color
 setw -q -g utf8 on
 
 # Move between panes via HJKL
