--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,9 +61,9 @@ set -g display-time 5000
 set -g focus-events on
 
 # Add ssh var to sessions
-set -ga update-environment ' SSH_CONNECTION'
-set -ga update-environment ' SSH_CLIENT'
-set -ga update-environment ' SSH_TTY'
+# set -ga update-environment ' SSH_CONNECTION'
+# set -ga update-environment ' SSH_CLIENT'
+# set -ga update-environment ' SSH_TTY'
 
 # Set sensible copy mode key bindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
@@ -84,7 +84,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum' # automatic session save and restor
 set-option -g status-right '#(cat ~/.pomo_stat)'
 
 # Set SSH vars
-set-option -ga update-environment ' SSH_CLIENT SSH_CONNECTION SSH_TTY'
+# set-option -ga update-environment ' SSH_CLIENT SSH_CONNECTION SSH_TTY'
 
 # restore neovim sessions
 set -g @resurrect-strategy-nvim 'session'
