--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,9 +1,10 @@
 {
-  "suggest.echodocSupport": true,
   "suggest.maxCompleteItemCount": 20,
-  "suggest.floatEnable": false,
+  "signature.enable": true,
   "signature.target": "float",
-  "coc.preferences.hoverTarget": "float",
+  "signature.preferShownAbove": false,
+  "signature.hideOnTextChange": true,
+  "signature.triggerSignatureWait": 1000,
   "diagnostic.errorSign": "X",
   "diagnostic.warningSign": "!",
   "diagnostic.infoSign": ">>",
@@ -21,11 +22,6 @@
   "python.jediEnabled": true,
   "python.linting.enabled": false,
   "languageserver": {
-    "dockerfile": {
-      "command": "docker-langserver",
-      "filetypes": ["dockerfile"],
-      "args": ["--stdio"]
-    },
     "bash": {
       "command": "bash-language-server",
       "args": ["start"],
