--- a/.gitconfig
+++ b/.gitconfig
@@ -167,10 +167,8 @@
     autocorrect = 1
 
 [push]
-  # Use the Git 1.x.x default to avoid errors on machines with old Git
-  # installations. To use `simple` instead, add this to your `~/.extra` file:
-  # `git config --global push.default simple`. See http://git.io/mMah-w.
-	default = nothing
+  # pushes current branch instead of all branches
+	default = current
   # Make `git push` push relevant annotated tags when pushing branches out.
   followTags = true
 
