Additional conda function, clean up colors, fix some python tooling/linking

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,6 +86,10 @@ set-option -g status-right '#(cat ~/.pomo_stat)'
 # Set SSH vars
 # set-option -ga update-environment ' SSH_CLIENT SSH_CONNECTION SSH_TTY'
 
+# # Tmux-Yank settings
+# set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+#
+
 # restore neovim sessions
 set -g @resurrect-strategy-nvim 'session'
 
