Add tmux logging

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,6 +79,7 @@ set -g @plugin 'tmux-plugins/tmux-yank' # OS aware copy to clipboard
 set -g @plugin 'tmux-plugins/tmux-sensible' # sensible standars
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist sessions
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatic session save and restoration
+set -g @plugin 'tmux-plugins/tmux-logging' # Tmux logging
 
 # Pomo integration
 set-option -g status-right '#(cat ~/.pomo_stat)'
