Add .zshrc and tweaks to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,11 +38,11 @@ set -g pane-base-index 1
 
 # Enable utf and colors
 # This only enabled after adding new italic terminfo
-set -g default-terminal "tmux-256color-italic"
+# set -g default-terminal "tmux-256color-italic"
 #  enable terminal compatibility with outside terminal
 set-option -ga terminal-overrides ",xterm-256color-italic:Tc"
 
-# set -g default-terminal screen-256color
+set -g default-terminal screen-256color
 setw -q -g utf8 on
 
 # Move between panes via HJKL
@@ -75,6 +75,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe 'xclip -in -selection clipboar
 # Plugins
 # ==========
 set -g @plugin 'tmux-plugins/tpm' # plugin manager
+set -g @plugin 'dracula/tmux' # Dracula theme for Tmux
 set -g @plugin 'tmux-plugins/tmux-yank' # OS aware copy to clipboard
 set -g @plugin 'tmux-plugins/tmux-sensible' # sensible standars
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist sessions
