--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,6 +36,8 @@ set-window-option -g mode-keys vi
 set -g base-index 1
 set -g pane-base-index 1
 
+set-option -g default-shell $SHELL
+
 # Enable utf and colors
 # This only enabled after adding new italic terminfo
 # set -g default-terminal "tmux-256color-italic"
@@ -105,5 +107,6 @@ set -g @continuum-boot-options 'iterm,fullscreen' # start iterm and fullscreen o
 set -g @resurrect-save 'S'
 set -g @resurrect-restore 'R'
 
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
